[project]
name = "agentlearning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13,<3.14"
dependencies = [
    "agentscope>=2.0.2",
    "asyncio>=4.0.0",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[azure,openai]>=0.7.5",
    "dashscope>=1.25.23",
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "gradio==6.19.0",
    "hello-agents>=0.2.8,<0.3.0",
    "langgraph>=1.2.5",
    "markitdown[pdf]>=0.1.6",
    "neo4j>=6.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "spacy>=3.8.0",
    "tavily-python>=0.7.26",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
